@@ -1,5 +1,5 @@
 
-		LablGL 1.05: Installation and Use instructions
+		LablGL 1.06: Installation and Use instructions
 
 1. Description
 
@@ -12,7 +12,8 @@ LablGlut for standalone applications not using Tcl/Tk.
 
 2. Requisites
 
-  * Objective Caml 3.05 to 4.07
+  * Objective Caml 3.05 to 4.08
+  * Compatible version of Camlp5 (or Camlp4, see Makefile.common)
   * LablTk (included in Objective Caml, requires Tcl/Tk) for Togl support
   * OpenGL
   * glut (included in Mesa) for glut support
