@@ -1,5 +1,3 @@
-(* $Id: var2def.ml,v 1.9 2001-09-06 08:27:02 garrigue Exp $ *)
-
 open StdLabels
 
 (* Compile a list of variant tags into CPP defines *) 
@@ -14,7 +12,7 @@ let hash_variant s =
   (* reduce to 31 bits *)
   accu := !accu land (1 lsl 31 - 1);
   (* make it signed for 64 bits architectures *)
-  if !accu > 0x3FFFFFFF then !accu - (1 lsl 31) else !accu
+  if !accu > 0x3FFFFFFF then !accu - 1 lsl 31 else !accu
 
 open Genlex
 
@@ -23,23 +21,33 @@ let lexer = make_lexer ["->"; "$$"]
 let main () =
   let s = lexer (Stream.of_channel stdin) in
   let tags = Hashtbl.create 57 in
-  try while true do match s with parser
-      [< ' Ident tag >] ->
-	print_string "#define MLTAG_";
-	print_string tag;
-	print_string "\tVal_int(";
-	let hash = hash_variant tag in
-	begin try
-	  failwith
-	    (String.concat ~sep:" "
-	       ["Doublon ~tag:";tag;"and";Hashtbl.find tags hash])
-	with Not_found -> Hashtbl.add tags hash tag
-	end;
-	print_int hash;
-	print_string ")\n"
-    | [< ' Kwd "->"; ' Ident _ >] -> ()
-    | [< ' Kwd "$$" >] -> ()
-    | [< >] -> raise End_of_file
-  done with End_of_file -> ()
+  try
+    while true do
+      let (strm__ : _ Stream.t) = s in
+      match Stream.peek strm__ with
+        Some (Ident tag) ->
+          Stream.junk strm__;
+          print_string "#define MLTAG_";
+          print_string tag;
+          print_string "\tVal_int(";
+          let hash = hash_variant tag in
+          begin try
+            failwith
+              (String.concat ~sep:" "
+                 ["Doublon ~tag:"; tag; "and"; Hashtbl.find tags hash])
+          with Not_found -> Hashtbl.add tags hash tag
+          end;
+          print_int hash;
+          print_string ")\n"
+      | Some (Kwd "->") ->
+          Stream.junk strm__;
+          begin match Stream.peek strm__ with
+            Some (Ident _) -> Stream.junk strm__; ()
+          | _ -> raise (Stream.Error "")
+          end
+      | Some (Kwd "$$") -> Stream.junk strm__; ()
+      | _ -> raise End_of_file
+    done
+  with End_of_file -> ()
 
 let _ = Printexc.print main ()
